heatmap endpoint
