# models/model_heatmap_data.go
@@ -1,0 +1,8 @@
+package models
+
+type HeatmapData struct {
+
+	Date string `json:"date,omitempty"`
+
+	Value int32 `json:"value,omitempty"`
+}
