# openapi.yaml
@@ -54,6 +54,33 @@ paths:
           description: Invalid input
         '500':
           description: Server error
+  /commits/heatmap:
+    post:
+      summary: Get commits from one or more repositories and return in a cal-heatmap compatible format
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommitsRequest'
+          application/x-yaml:
+            schema:
+              $ref: '#/components/schemas/CommitsRequest'
+      responses:
+        '200':
+          description: List of commits grouped by repo
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/HeatmapData'
+        '400':
+          description: Invalid input
+        '500':
+          description: Server error
 
 components:
   schemas:
@@ -104,3 +131,13 @@ components:
           format: date-time
         message:
           type: string
+
+    HeatmapData:
+      type: object
+      properties:
+        date:
+          type: string
+          format: date
+        value:
+          type: integer
+
